# fall-2024-class-05

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml
.devcontainer/: configure_environment.sh
notebooks/: 00_dataloading.ipynb  02_model_explainability_with_captum.ipynb  03_model_saving_with_onnx.ipynb  04_visualizing_models.ipynb  04_visualizing_models_and_training.ipynb  05_custom_loss_function.ipynb  example.ipynb
notebooks/example_data/: README.md
notebooks/example_data/custom_dataset/: labels.txt
notebooks/models/: README.md
notebooks/runs/: README.md
scripts/: example_nbia_download.sh
submodules/: README.md
