[tool.poetry]
name = "loaded-lecture-template"
version = "0.1.0"
description = "Template for lecture notes with reveal.js presentations, latex dependencies, poetry, and VS Code extensions for Python."
authors = ["Mauro J. Sanchirico III <156733573+mauro-j-sanchirico@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
ipython = "^8.27.0"
ipympl = "^0.9.4"
scipy = "^1.14.1"
latex = "^0.7.0"
pydatapull = {path = "submodules/data-loaders"}
torch = "^2.4.1"
torchvision = "^0.19.1"
gdown = "^5.2.0"
pandas = "^2.2.3"
captum = "^0.7.0"
flask = "^3.0.3"
flask-compress = "^1.15"
onnx = "^1.17.0"
onnxruntime = "^1.19.2"
tensorboard = "^2.18.0"
jupyter = "^1.1.1"
torchviz = "^0.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
mypy-extensions = "^1.0.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
